added styles and scripts for products

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
   <link rel="stylesheet" href="./assets/styles/main.css">
   <link rel="stylesheet" href="./assets/styles/regular.css">
-  <link rel="stylesheet" href="./assets/styles/mobile.css">
 
   <title>Got Hooked: Crochet Online Store</title>
 </head>
@@ -27,7 +26,6 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root"></div>
   <div>
     <div class="landing">
       <div class="logo">
@@ -41,21 +39,12 @@
         <a href='#products'>Shop Now!</a>
       </div>
     </div>
-    <div class="products" id="products">
+    <div id="products">
       <div class="header">
         <img src="./assets/img/logo.png">
         Products
       </div>
       <div id="body">
-        <div class="product">
-          <div class="header">
-            <span class="title"></span>
-          </div>
-          <div class="img"></div>
-          <div class="footer">
-            <div class="sets"></div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
