added favicon & improved css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-
-  <!-- include semantic ui css -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
+  <link rel="icon" type="image/png" href="./assets/img/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="./assets/img/favicon-16x16.png" sizes="16x16" />
 
   <!-- include Open Sans and MPLUS -->
   <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Open+Sans" rel="stylesheet">
