fixed missing icons'

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/png" href="./assets/img/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="./assets/img/favicon-16x16.png" sizes="16x16" />
 
+  <!-- include semantic ui css -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
+
   <!-- include Open Sans and MPLUS -->
   <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Open+Sans" rel="stylesheet">
 
